# task-tracker

./: .env  .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
prisma/: schema.prisma
prisma/migrations/20250120132512_/: migration.sql
src/: db.rs  main.rs  routes.rs
