[package]
name = "task-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
http = "1.2.0"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
tracing-subscriber = "0.3.19"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11" }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11" }